src/z80asm/z80asm2/t/30-hla/expected/while_01.txt
% z88dk-z80asm -v -dump-after-hla t/30-hla//input/while_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/30-hla/input/while_01.asm...
t/30-hla/input/while_01.asm:1:7: error: Unexpected token in condition: 

    %while
          ^
t/30-hla/input/while_01.asm:2:13: error: Unexpected token after WHILE: extra
    %while true extra
                ^
t/30-hla/input/while_01.asm:3:10: error: Unexpected token after WHILE: extra
    %while z extra
             ^
t/30-hla/input/while_01.asm:4:10: error: Expected expression
    %while a>
             ^
t/30-hla/input/while_01.asm:5:2: error: ENDWHILE without WHILE
    %endwhile
     ^
t/30-hla/input/while_01.asm:7:2: error: Unclosed HLA construct WHILE
    %while z
     ^
